--- a/src/components/Table/style.module.css
+++ b/src/components/Table/style.module.css
@@ -8,3 +8,85 @@
     border-radius: 15px 15px 15px 15px;
     transform: rotate(0);
 }
+
+.wrapper {
+    position: absolute;
+    top: 163px;
+    left: 54px;
+    width: 602px;
+    height: 472px;
+    border-radius: 10px;
+    background-color: #133252;
+    border-collapse:collapse;
+}
+
+.tblHeader {
+    width: 100%;
+    height: 34px;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #275789;
+    overflow: hidden;
+    /* padding for first item */
+    box-sizing: border-box;
+    padding-left: 40px;
+    /* font */
+    font-size: 15px;
+    letter-spacing: 0;
+    line-height: 18px;
+    color: #7D9CC6;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.tblTh {
+    margin-top: 9px;
+}
+
+.tblBody {
+    width: 100%;
+    overflow: hidden;
+
+    /* font */
+    font-size: 13px;
+    letter-spacing: 0;
+    line-height: 15px;
+}
+
+.tblTr {
+    /* padding for first item */
+    box-sizing: border-box;
+    padding-left: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding-top: 23px;
+    /* transition: all 0.2s; */
+    animation-duration: 0.3s;
+    animation-name: slidein;
+}
+
+.colWhite {
+    color: #FFFFFF;
+}
+
+.profitPlus {
+    color: #73FC7F;
+}
+
+.profitMinus {
+    color: #FD7979;
+}
+
+
+@keyframes slidein {
+    from {
+      margin-top: -40px;
+      opacity: 0;
+      width: 300%;
+    }
+  
+    to {
+      margin-top: 0%;
+      opacity: 1;
+      width: 100%;
+    }
+}
