--- a/src/components/Table/style.module.css
+++ b/src/components/Table/style.module.css
@@ -60,7 +60,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     padding-top: 23px;
     /* transition: all 0.2s; */
-    animation-duration: 0.3s;
+    animation-duration: 1s;
     animation-name: slidein;
 }
 
@@ -76,16 +76,21 @@
     color: #FD7979;
 }
 
-
 @keyframes slidein {
     from {
       margin-top: -40px;
       opacity: 0;
-      width: 300%;
+      width: 100%;
     }
   
+    /* 75% {
+        margin-top: -6px;
+        opacity: 0.9;
+        width: 100%;
+    } */
+
     to {
-      margin-top: 0%;
+      margin-top: 0px;
       opacity: 1;
       width: 100%;
     }
