--- a/src/components/Slider/Amount/style.module.css
+++ b/src/components/Slider/Amount/style.module.css
@@ -1,17 +1,20 @@
 .container {
-    position: absolute;
-    left: 46px;
-    bottom: 32px;
     display: flex;
+    justify-content:center;
+    margin: 20px 0;
 }
 
 /* COUNTER SECTION */
 
 .counter {
-    width: 265px;
+    display: inline-block;
+    /* width: calc(100% - 116px); */
+    max-width: 265px;
+    padding: 0 20px;
     height: 57px;
     border-radius: 8px 0 0 8px;
     background-color: #0A1A33;
+    vertical-align: bottom;
 }
 
 .label {
@@ -39,6 +42,7 @@
 /* DECREASER SECTION */
 
 .half {
+    display: inline-block;
     width: 58px;
     height: 57px;
     background-color: #275E9A;
@@ -59,6 +63,7 @@
 /* INCREASER SECTION */
 
 .double {
+    display: inline-block;
     width: 58px;
     height: 57px;
     background-color: #275E9A;
