--- a/src/components/Slider/style.module.css
+++ b/src/components/Slider/style.module.css
@@ -1,19 +1,23 @@
 .container {
-    position: absolute;
-    left: 97px;
-    top: 142px;
-    width: 473px;
-    height: 823px;
+    position: relative;
+    width: 27%;
     background-color: #525252;
     border-radius: 15px 15px 15px 15px;
     transform: rotate(0);
 }
 
-.wrapper {
-    position: absolute;
-    left: 107px;
-    top: 68px;
-    width: 259.51px;
-    height: 590px;
-    transform: rotate(0);
+
+
+/* RESPONSIVE */
+@media only screen and (max-width: 1200px) {
+    .container {
+        width: 45%;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .container {
+        width: 94%;
+        margin: 50px 0;
+    }
 }
